--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "serverless deploy --aws-profile serverless",
-    "start": "serverless offline -s prod --aws-profile serverless",
-    "debug": "node --inspect /usr/local/lib/node_modules/serverless/bin/serverless --aws-profile serverless offline -s prod"
+    "start": "serverless offline -s prod",
+    "debug": "node --inspect /usr/local/lib/node_modules/serverless/bin/serverless offline -s prod"
   },
   "author": "Jose Reyes",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.686.0",
+    "dotenv": "^8.2.0",
     "ksuid": "^1.2.0",
     "middy": "^0.36.0"
   },
